[package]
name = "remux"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
eframe = "0.30.0"
finl_unicode = "1.3.0"
nix = { version = "0.29.0",features = ["term", "process", "fs"]  }
termwiz = "0.22.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features=["compat"] }
vte = "0.13.0"
